--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^4.2.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "popper.js": "^1.14.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router-dom": "^5.0.0",
