--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.15",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.4.0",
+    "uuid": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
